# fastapi-project-template

./: Makefile  README.md  pyproject.toml
.github/workflows/: main.yaml
app/: main.py
app/api/routes/: __init__.py  users.py
app/tests/: test_users.py
